--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,10 @@ header img {
 	padding: 8px 0;
 	border-bottom: 1px solid #eee;
 }
+.hit:hover {
+	box-shadow: 0 1px 6px rgba(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.12);
+	transition: all 850ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
 .hit-image {
 	display: inline-block;
 	width: 16%;
