--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,8 @@ header img {
 	border-bottom: 1px solid #eee;
 }
 .hit:hover {
+	-moz-box-shadow: 0 1px 6px rgba(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.12);
+	-webkit-box-shadow: 0 1px 6px rgba(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.12);
 	box-shadow: 0 1px 6px rgba(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.12);
 	transition: all 850ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 }
